UCF-APR2.4/ftr main/force-app/main/default/objects/Contract_Free_Form_Token__c/Contract_Free_Form_Token__c.object-meta.xml
<CustomObject>
    <description>CLM Contract Free Form Token</description>
    <label>Contract Free Form Token</label>
    <nameField>
        <label>Contract Free Form Token</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Free Form Tokens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>