UCF-APR2.4/ftr main/force-app/main/default/objects/Contract_Free_Form_Token__c/fields/Display_Label__c.field-meta.xml
<CustomField>
    <fullName>Display_Label__c</fullName>
    <description>CLM Display Label</description>
    <label>Display Label</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>