UCF-APR2.4/ftr main/force-app/main/default/objects/Contract_Free_Form_Token__c/fields/Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Help_Text__c</fullName>
    <description>CLM Help Text</description>
    <label>Help Text</label>
    <length>120</length>
    <type>Text</type>
</CustomField>