UCF-APR2.4/ftr main/force-app/main/default/objects/Contract_Free_Form_Token__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <label>Scope</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract</fullName>
                <default>true</default>
                <label>Contract</label>
            </value>
            <value>
                <fullName>Line Item</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>