UCF-APR2.4/ftr main/force-app/main/default/objects/Contract_Free_Form_Token__c/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <description>Template Name</description>
    <label>Template Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>