UCF-APR2.4/ftr main/force-app/main/default/objects/Contract_Free_Form_Token__c/fields/Token_Name__c.field-meta.xml
<CustomField>
    <fullName>Token_Name__c</fullName>
    <description>CLM Token Name</description>
    <label>Token Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>