UCF-APR2.4/ftr main/force-app/main/default/objects/Contract_Free_Form_Token__c/fields/Token_Order__c.field-meta.xml
<CustomField>
    <fullName>Token_Order__c</fullName>
    <description>CLM Token Order. Determines the order of the question</description>
    <label>Token Order</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>